Use XSS safe filename validation for FileApi model
- depends on private-api-sdk-java PR#1195
- TODO: update private-api-sdk-java in pom.xml when it's released

Resolves:
ASM-2552